# fairyweb

./: .env  .gitignore  Cargo.toml  FairyBoard.sql  README.md  updates.note
migrations/: FairyBoard.sql
src/: config.rs  main.rs
src/server/: board.rs  chat.rs  errors.rs  home.rs  init.rs  mod.rs  models.rs  script.rs  security.rs  style.rs  user.rs
